kubernetes/practice/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1 # what is this
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx" # kopplar vår ingress till den installerade nginx-ingress
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls: # sätter att vi ska bara acceptera https trafik till er domän
  - hosts:
    - microblogonsteroids.software
    secretName: demo-tls # det kommer senare skapas en secret med detta namnet som innehåller certificatet för vårt domännamn.
  rules:
  - host: microblogonsteroids.software
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
